--- a/welcome-to-ghost/index.html
+++ b/welcome-to-ghost/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="../assets/css/font-awesome.min.css" charset="utf-8">
 
-  <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,300,300italic,500,500italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,300,300italic,500,500italic' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" type="text/css" href="../assets/css/screen.css" charset="utf-8">
   <link rel="stylesheet" type="text/css" href="../assets/css/color.css" charset="utf-8">
