remove broken fading on logo and title

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 <header class="site-head " style="background-image: url(content/images/2014/10/cover.png)">
   <div class="vertical">
     <div class="site-head-content inner">
-      <a class="blog-logo fade-in one" href="index.html"><img src="content/images/2014/10/hubble-1.jpg" alt="Blog Logo" /></a>
-      <h1 class="blog-title fade-in two">Mike&#x27;s Musings</h1>
+      <a class="blog-logo one" href="index.html"><img src="content/images/2014/10/hubble-1.jpg" alt="Blog Logo" /></a>
+      <h1 class="blog-title two">Mike&#x27;s Musings</h1>
       <h2 class="blog-description fade-in three">Thoughts, stories and ideas.</h2>
     </div>
   </div>
