--- a/publishing-a-typescript-package-to-npm/index.html
+++ b/publishing-a-typescript-package-to-npm/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" type="text/css" href="../assets/css/color.css" charset="utf-8">
   <link rel="stylesheet" type="text/css" href="../assets/css/SETTINGS.css" charset="utf-8">
   <link rel="stylesheet" type="text/css" href="../assets/css/CUSTOM.css" charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="../assets/css/prism.css" charset="utf-8">
 
   <link rel="canonical" href="index.html" />
     
@@ -258,6 +259,7 @@
   <script type="text/javascript" src="../assets/js/images-loaded.js" charset="utf-8"></script>
   <script type="text/javascript" src="../assets/js/masonry.js" charset="utf-8"></script>
   <script type="text/javascript" src="../assets/js/color-thief.js" charset="utf-8"></script>
+  <script type="text/javascript" src="../assets/js/prism.js" charset="utf-8"></script>
 
   <script type="text/javascript" src="../assets/js/index.js"></script>
 
