--- a/index.html
+++ b/index.html
@@ -62,6 +62,23 @@
 		<article class="article_digitus">
 
             <span class="posttitle_digitus">
+                <h2><a href="a-simple-comments-app-with-om/index.html" rel="bookmark">
+				    Building UI Components with Om, ClojureScript, and React
+                    </a>
+                </h2>
+                <span class="tooltip_digitus">
+                    <p><i class="fa fa-calendar"></i>
+                    <time>
+                        3 minutes ago
+                    </time></p>
+                </span>
+           </span>
+		</article>
+
+
+		<article class="article_digitus">
+
+            <span class="posttitle_digitus">
                 <h2><a href="handling-asynchronous-data-flow-in-flux/index.html" rel="bookmark">
 				    Async Server-Side Communication with the Flux Architecture
                     </a>
@@ -69,7 +86,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        6 days ago
+                        7 days ago
                     </time></p>
                 </span>
            </span>
@@ -86,7 +103,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        21 days ago
+                        22 days ago
                     </time></p>
                 </span>
            </span>
