--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0"><channel><title><![CDATA[mike wilcox]]></title><description><![CDATA[mike wilcox]]></description><link>http://localhost:2368/</link><generator>Ghost 0.5</generator><lastBuildDate>Sun, 07 Dec 2014 23:42:26 GMT</lastBuildDate><atom:link href="http://localhost:2368/rss/" rel="self" type="application/rss+xml"/><ttl>60</ttl><item><title><![CDATA[Building UI Components with Om, ClojureScript, and React]]></title><description><![CDATA[<p>Om is a <a href="https://github.com/clojure/clojurescript">ClojureScript</a> interface to Facebook's <a href="https://github.com/facebook/react">React</a>. From their <a href="https://github.com/swannodette/om">github</a>:</p>
+<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0"><channel><title><![CDATA[mike wilcox]]></title><description><![CDATA[mike wilcox]]></description><link>http://localhost:2368/</link><generator>Ghost 0.5</generator><lastBuildDate>Mon, 08 Dec 2014 00:02:36 GMT</lastBuildDate><atom:link href="http://localhost:2368/rss/" rel="self" type="application/rss+xml"/><ttl>60</ttl><item><title><![CDATA[Building UI Components with Om, ClojureScript, and React]]></title><description><![CDATA[<p><a href="https://github.com/swannodette/om">Om</a> is a <a href="https://github.com/clojure/clojurescript">ClojureScript</a> interface to Facebook's <a href="https://github.com/facebook/react">React</a>. From their <a href="https://github.com/swannodette/om">github</a>:</p>
 
 <blockquote>
   <p>Om allows users to represent their UIs simply as <a href="https://github.com/edn-format/edn">EDN</a>. Because ClojureScript data is immutable data, Om can always rapidly re-render the UI from the root. Thus Om UIs are out of the box snapshotable and undoable and these operations have no implementation complexity and little overhead.</p>
@@ -9,7 +9,7 @@
 
 <ul>
 <li>Comments Box</li>
-<li>Comment List</li>
+<li>Comments List</li>
 <li>Comment</li>
 <li>Input</li>
 </ul>
@@ -20,7 +20,7 @@
 
 <pre><code class="language-javascript">(def app-state
   (atom
-    {:comments {:data [{ :author "Commenter 1" :text "comment 1" }
+    {:data {:comments [{ :author "Commenter 1" :text "comment 1" }
                        { :author "Commenter 2" :text "comment 2" }]}}))
 </code></pre>
 
