add rn pt 1 post

--- a/index.html
+++ b/index.html
@@ -62,6 +62,23 @@
 		<article class="article_digitus">
 
             <span class="posttitle_digitus">
+                <h2><a href="react-native-flux-and-music/index.html" rel="bookmark">
+				    React Native, Flux, &amp; Music :: Part I
+                    </a>
+                </h2>
+                <span class="tooltip_digitus">
+                    <p><i class="fa fa-calendar"></i>
+                    <time>
+                        2 minutes ago
+                    </time></p>
+                </span>
+           </span>
+		</article>
+
+
+		<article class="article_digitus">
+
+            <span class="posttitle_digitus">
                 <h2><a href="a-simple-comments-app-with-om/index.html" rel="bookmark">
 				    Building UI Components with Om, ClojureScript, and React
                     </a>
@@ -69,7 +86,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        29 minutes ago
+                        5 months ago
                     </time></p>
                 </span>
            </span>
@@ -86,7 +103,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        7 days ago
+                        5 months ago
                     </time></p>
                 </span>
            </span>
@@ -103,7 +120,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        22 days ago
+                        6 months ago
                     </time></p>
                 </span>
            </span>
