add react-native pt2 post

--- a/index.html
+++ b/index.html
@@ -62,6 +62,23 @@
 		<article class="article_digitus">
 
             <span class="posttitle_digitus">
+                <h2><a href="react-native-flux-music-part-ii/index.html" rel="bookmark">
+				    React Native, Flux, &amp; Music :: Part II
+                    </a>
+                </h2>
+                <span class="tooltip_digitus">
+                    <p><i class="fa fa-calendar"></i>
+                    <time>
+                        a few seconds ago
+                    </time></p>
+                </span>
+           </span>
+		</article>
+
+
+		<article class="article_digitus">
+
+            <span class="posttitle_digitus">
                 <h2><a href="react-native-flux-and-music/index.html" rel="bookmark">
 				    React Native, Flux, &amp; Music :: Part I
                     </a>
@@ -69,7 +86,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        2 hours ago
+                        5 days ago
                     </time></p>
                 </span>
            </span>
