add rich hickey video link

--- a/a-simple-comments-app-with-om/index.html
+++ b/a-simple-comments-app-with-om/index.html
@@ -94,7 +94,7 @@
 	
 		<header class="postheader_digitus">
             <h1 class="posttitle_digitus">Building UI Components with Om, ClojureScript, and React</h1>
-            <span>by</span><h4 class="authorname_digitus"><a href="../author/mike/index.html">Mike Wilcox</a></h4>
+            <span>by</span><h4 class="authorname_digitus"><a href="http://localhost:2368/author/mike">Mike Wilcox</a></h4>
             <hr class="pause" />
 			<ul>
 				<li><i class="fa fa-calendar"></i><time class="date_digitus" >Sunday 07 Dec 2014</time></li>
@@ -232,7 +232,7 @@
 				<div class="authorimage_digitus" style="background-image: url(http://www.gravatar.com/avatar/24b41978e9a7a9fa51b8cb52bc0966b8?d=404&amp;s=250)"></div>
          
                 <ul>
-				    <li><h4 class="authorname_digitus"><a href="../author/mike/index.html">Mike Wilcox</a></h4></li>
+				    <li><h4 class="authorname_digitus"><a href="http://localhost:2368/author/mike">Mike Wilcox</a></h4></li>
                     <li><p class="authorbio_digitus"></p></li>
 				    <li>  
                     </li>
