fetch zones post

--- a/index.html
+++ b/index.html
@@ -63,6 +63,23 @@
 		<article class="article_digitus">
 
             <span class="posttitle_digitus">
+                <h2><a href="using-fetch-api-with-angular-2/index.html" rel="bookmark">
+				    Using the Fetch API with Angular 2 Using Zones
+                    </a>
+                </h2>
+                <span class="tooltip_digitus">
+                    <p><i class="fa fa-calendar"></i>
+                    <time>
+                        2 minutes ago
+                    </time></p>
+                </span>
+           </span>
+		</article>
+
+
+		<article class="article_digitus">
+
+            <span class="posttitle_digitus">
                 <h2><a href="design-composition-and-performance/index.html" rel="bookmark">
 				    Design, Composition and Performance
                     </a>
@@ -70,7 +87,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        a few seconds ago
+                        20 hours ago
                     </time></p>
                 </span>
            </span>
@@ -87,7 +104,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        a day ago
+                        2 days ago
                     </time></p>
                 </span>
            </span>
@@ -104,7 +121,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        6 days ago
+                        7 days ago
                     </time></p>
                 </span>
            </span>
@@ -122,23 +139,6 @@
                     <p><i class="fa fa-calendar"></i>
                     <time>
                         5 months ago
-                    </time></p>
-                </span>
-           </span>
-		</article>
-
-
-		<article class="article_digitus">
-
-            <span class="posttitle_digitus">
-                <h2><a href="handling-asynchronous-data-flow-in-flux/index.html" rel="bookmark">
-				    Async Server-Side Communication with the Flux Architecture
-                    </a>
-                </h2>
-                <span class="tooltip_digitus">
-                    <p><i class="fa fa-calendar"></i>
-                    <time>
-                        6 months ago
                     </time></p>
                 </span>
            </span>
